# ProperTIQ

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
app/: README.md  __init__.py  _aoi.py  _enrich.py  _logic.py  presets.py  strategy_builder.py
docs/: PRD.md  api.md  concepts.md  config-app.md  examples.md  index.md  quickstart.md  yaml.md
examples/: README.md  car_wash.ipynb  rv_storage.ipynb
scripts/: gen_blocks.py
specs/: constitution.md
specs/001-scoring-core/: plan.md  spec.md  tasks.md
specs/002-strategy-config/: plan.md  spec.md  tasks.md
specs/003-config-app/: plan.md  spec.md  tasks.md
specs/004-result-viz/: spec.md
specs/005-docs-site/: spec.md  tasks.md
specs/006-site-terrain/: spec.md  tasks.md
src/propertiq/: __init__.py  config.py  crs.py  filters.py  io.py  registry.py  scoring.py  strategy.py  viz.py
tests/: conftest.py  test_app_logic.py  test_config.py  test_crs.py  test_export.py  test_filters.py  test_presets.py  test_registry.py  test_scoring.py  test_site_terrain.py  test_smoke.py  test_viz.py
